--- a/src/main/resources/templates/editSkills.html
+++ b/src/main/resources/templates/editSkills.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Skills</title>
+    <title>Edit Skill</title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"/>
 </head>
 <body>
